# ESP-Media-Station

./: .gitignore  CMakeLists.txt  README.md  cppcheck_suppressions.txt  ff  partitions.csv  sdkconfig.defaults
.github/workflows/: ci.yml
components/app/: CMakeLists.txt
components/app/inc/: audio.hpp  codec.hpp  config.hpp  display.hpp  tasks.hpp  utils.hpp
components/app/src/: audio.cpp  codec.cpp  display.cpp  tasks.cpp
components/app/test/: CMakeLists.txt  test_codec.cpp
components/drivers/: CMakeLists.txt
components/drivers/inc/: camera.hpp  coord_compute.hpp  ili9341.hpp  inmp441.hpp  max98357.hpp  ov3660.hpp  xpt2046.hpp
components/drivers/src/: ili9341.cpp  inmp441.cpp  max98357.cpp  xpt2046.cpp
components/drivers/test/: CMakeLists.txt  test_coord_compute.cpp  test_ili9341.cpp  test_inmp441.cpp  test_max98357.cpp  test_xpt2046.cpp
main/: CMakeLists.txt  idf_component.yml  idf_components.yml  main.cpp
tests/: CMakeLists.txt
tests/main/: CMakeLists.txt  test_main.cpp
unity-app/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
unity-app/main/: CMakeLists.txt  idf_component.yml  test_app_main.c
